# time_series_prediction_energy

./: README.md  pyproject.toml  requirements.txt
data/processed/: hourly_test.csv  hourly_train.csv  test.csv
notebooks/: Models.ipynb  eda.ipynb  eda.md  hourly_data_with_absent_day.csv
